--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
 .navbar{
     display: flex;
     background-color: rgba(191, 214, 196, 0.9);
-    height: 50px;
-
+    height: 85px;
+    padding-left: 53px;
+    padding-right: 53px;
 }
 
 .logo{
@@ -15,11 +16,14 @@
     display: flex;
     align-items: center;
     margin-left: 20px;
+    font-size: 25px;
+    
 }
 .nparts{
     list-style-type: none;
     display: flex;
     align-items: center;
+    font-size: 20px;
 }
 .nparts li{
     margin-right: 20px;
@@ -37,4 +41,59 @@ body{
 .logo{
   text-decoration: none; 
   color: black;      
+}
+
+.aboutsec{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.ppbox{
+    width: auto;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+}
+
+.pp{
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.pp img{
+    transform: translateY(2px);
+    transition-duration: 1s;
+}
+
+.pp img:hover{
+    transform: scale(1.1);
+}
+
+.ppic{
+    scale: 1.1;
+}
+
+.apara{
+    box-sizing: border-box;
+    margin-top: 45px;
+    display: block;
+    text-align: center;
+    font-weight: 300;
+    unicode-bidi: isolate;
+}
+
+.about-page{
+    height: 900px;
+}
+.project-page{
+    height: 900px;
+    background-color: red;
+}
+.skills-page{
+    height: 900px;
+    background-color: black;
+}
+.message-page{
+    height: 900px;background-color: blue;
 }
