--- a/style.css
+++ b/style.css
@@ -3,34 +3,47 @@
     padding: 0;
 }
 
+body{
+    background-color: rgb(248, 248, 248);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .navbar{
     display: flex;
     background-color: rgba(191, 214, 196, 0.9);
     height: 85px;
-    padding-left: 53px;
-    padding-right: 53px;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+    top:0;
+    opacity: 1.0;
 }
+
+
 
 .logo{
     margin-right: auto;
     display: flex;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 50px;
     font-size: 25px;
-    
+    text-decoration: none;
+    color: black;
 }
+
 .nparts{
     list-style-type: none;
     display: flex;
     align-items: center;
-    font-size: 20px;
-}
-.nparts li{
+    font-size: 25px;
     margin-right: 20px;
 }
 
-body{
-    background-color: rgb(248, 248, 248);
+.nparts li{
+    margin-right: 30px;
 }
 
 .nparts a{
@@ -38,15 +51,15 @@ body{
   color: black;      
 }
 
-.logo{
-  text-decoration: none; 
-  color: black;      
+#about-page{
+    height: 900px;
+    margin-top: 150px;
 }
-
-.aboutsec{
+.greet{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    font-size: 46px;
+    font-weight: 700;
 }
 
 .ppbox{
@@ -74,26 +87,38 @@ body{
     scale: 1.1;
 }
 
-.apara{
+.paragraph-box{
+    display: flex;
+    justify-content: center;
+}
+
+.paragraph{
     box-sizing: border-box;
     margin-top: 45px;
     display: block;
     text-align: center;
-    font-weight: 300;
-    unicode-bidi: isolate;
+    width: 800px;
+
 }
 
-.about-page{
-    height: 900px;
-}
-.project-page{
+
+#project-page{
     height: 900px;
     background-color: red;
 }
-.skills-page{
+#skills-page{
     height: 900px;
     background-color: black;
 }
-.message-page{
-    height: 900px;background-color: blue;
+
+#message-page{
+    height: 900px;
+    background-color: blue;
+}
+
+@font-face {
+  font-family: 'MyCustomFont'; /* Give your font a name */
+  src: url("D:\Codes\HTML\My website\Fonts\steph-font-bold.ttf") format('ttf'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
 }
