--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
     padding: 0;
 }
 
-body{
-    background-color: rgb(248, 248, 248);
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -23,7 +19,7 @@ html {
 
 .navbar{
     display: flex;
-    background-color: rgba(191, 214, 196, 0.9);
+    background-color: #eb2d42;
     height: 85px;
     width: 100%;
     position: fixed;
@@ -32,56 +28,62 @@ html {
     opacity: 1.0;
 }
 
-
-
 .logo{
     margin-right: auto;
     display: flex;
     align-items: center;
     margin-left: 50px;
-    font-size: 25px;
+    font-size: 30px;
     text-decoration: none;
-    color: black;
+    color: #f8f9fa;
     font-family: 'ekbfont', sans-serif;
 
 }
 
-.nparts{
+.nav-parts{
     list-style-type: none;
     display: flex;
     align-items: center;
-    font-size: 25px;
-    margin-right: 20px;
+    font-size: 30px;
+
 }
 
-.nparts li{
-    margin-right: 30px;
+.nav-parts li{
+    margin-right: 50px;
 }
 
-.nparts a{
+.nav-parts a{
     text-decoration: none; 
-    color: black; 
+    color: #f8f9fa; 
     font-family: 'ekbfont', sans-serif;
      
 }
 
 #about-page{
     height: 900px;
-    margin-top: 150px;
+    margin-top: 85px;
     font-family: 'eknfont', sans-serif;
+    background-color: #f8f9fa;
 }
 .greet{
     display: flex;
     justify-content: center;
-    font-size: 46px;
+    font-size: 50px;
 }
 
 .greet p{
     font-family: 'ekbfont', sans-serif;
+    margin-top: 50px;
+    color: #212529;
 }
-
+.greet p::after {
+    content: url(); /* The content to be added */
+    color: #eb2d42; /* The property is 'color' */
+}
 .ppbox{
+    /* border: solid black; */
     width: auto;
+    height: ;
     display: flex;
     justify-content: center;
     margin-top: 25px;
@@ -117,17 +119,14 @@ html {
     text-align: center;
     width: 844px;
     font-size: 20px;
-
+    color: #495057;
 }
 
 #project-page{
+    background-color: #F8F9FA;
     height: 900px;
-    background-color: red;
-}
-
-#message-page{
-    height: 900px;
-    background-color: blue;
+    display: flex;
+    justify-content: center;
 }
 
 .apps{
@@ -138,7 +137,7 @@ html {
 
 .apps a{
     text-decoration: none;
-    color: rgba(89, 118, 95, 0.9);
+    color: #ef233c;
     font-size: 40px;
     transition-duration: 0.3s;
     margin-left: 20px;
@@ -146,14 +145,10 @@ html {
 
 .apps a:hover{
     transform: scale(1.2);
-    color: rgba(114, 170, 125, 0.5);
+    color: #3a86ff;
 }
 
-#project-page{
-    background-color: beige;
-    display: flex;
-    justify-content: center;
-}
+
 
 #project-page p{
     margin-top: 100px;
@@ -161,13 +156,17 @@ html {
     font-size: 50px;
 }
 
+#skills-page{
+    background-color: #FFFFFF;
+    color: #212529;
+}
 
 .sk{
     display: flex;
     justify-content: center;
     font-family: 'ekbfont';
     margin-top: 100px;
-    font-size: 150px;
+    font-size: 45px;
 }
 
 .sapps{
@@ -179,11 +178,29 @@ html {
 
 .sapps i:hover{
     transform: scale(1.2);
-    color: rgba(114, 170, 125, 0.5);
+    color: #3a86ff;
 }
 
 .sapps i{
     font-size: 40px;
     margin-left: 20px;
-    color: rgba(89, 118, 95, 0.9);
+    color: #eb2d42;
+}
+
+
+#message-page{
+    height: 900px;
+    background-color: #F8F9FA;
+}
+
+.greet p::after {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 4px;
+    background-color: #bfd6c4;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 2px;
 }
